# game-of-life

./: pyproject.toml
game_of_life/: __main__.py
